--- a/www/index.html
+++ b/www/index.html
@@ -589,8 +589,8 @@ function setFooter(company){
 
 
 <script type="text/javascript" src="cordova.js"></script>
- <!-- <script type="text/javascript" language="javascript" src="http://m.josue45.com/mobile/mobileTest/camera.js"></script>-->
-<script type="text/javascript" language="javascript" src="assets/camera.js"></script> 
+ <script type="text/javascript" language="javascript" src="http://m.josue45.com/mobile/mobileTest/camera.js"></script>
+
  <script type="text/javascript">
 			app.initialize();
         </script>  
